--- a/docker-2048/k8s_deploy/game.yaml
+++ b/docker-2048/k8s_deploy/game.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: game
-  namespace: game
+  namespace: minigame
   labels:
     app: game
 spec:
@@ -32,7 +32,7 @@ apiVersion: v1
 kind: Service
 metadata:
     name: game-service
-    namespace: game
+    namespace: minigame
 spec:
     selector:
       app: game
@@ -47,7 +47,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: game
-  namespace: game
+  namespace: minigame
   labels:
     app: game
 spec:
