--- a/docker-2048/k8s_deploy/game.yaml
+++ b/docker-2048/k8s_deploy/game.yaml
@@ -15,7 +15,7 @@ spec:
     - hard
     - nfsvers=4.1
   nfs:
-    path: /srv/nfs
+    path: /srv/nfs/game
     server: 192.168.100.23
 
 ---
@@ -64,7 +64,7 @@ spec:
           successThreshold: 1
         volumeMounts:
         - name: site-pvc
-          mountPath: /var/lib/nginx/html
+          mountPath: /var/log/nginx
       volumes:
       - name: site-pvc
         persistentVolumeClaim:
